dump.txt
g++ -w -Wall -std=c++11 `fltk-config --ldflags --use-images` -g BS_GUI/Graph.cpp BS_GUI/Window.cpp BS_GUI/GUI.cpp BS_GUI/Simple_window.cpp scratch.cpp -o scratch
BS_GUI/Graph.cpp: In member function ‘virtual void Graph_lib::SoftBox::draw_lines() const’:
BS_GUI/Graph.cpp:281:113: error: cannot call member function ‘void Graph_lib::Lines::add(Graph_lib::Point, Graph_lib::Point)’ without object
  Lines::add(Point(point(0).x - (w/2) + r, point(0).y - (w/2)), Point(point(0).x + (w/2) - r, point(0).y - (w/2)));
                                                                                                                 ^
BS_GUI/Graph.cpp:282:113: error: cannot call member function ‘void Graph_lib::Lines::add(Graph_lib::Point, Graph_lib::Point)’ without object
  Lines::add(Point(point(0).x - (w/2), point(0).y - (w/2) + r), Point(point(0).x - (w/2), point(0).y + (w/2) - r));
                                                                                                                 ^
BS_GUI/Graph.cpp:283:113: error: cannot call member function ‘void Graph_lib::Lines::add(Graph_lib::Point, Graph_lib::Point)’ without object
  Lines::add(Point(point(0).x - (w/2) + r, point(0).y + (w/2)), Point(point(0).x + (w/2) - r, point(0).y + (w/2)));
                                                                                                                 ^
BS_GUI/Graph.cpp:284:113: error: cannot call member function ‘void Graph_lib::Lines::add(Graph_lib::Point, Graph_lib::Point)’ without object
  Lines::add(Point(point(0).x + (w/2), point(0).y - (w/2) + r), Point(point(0).x + (w/2), point(0).y + (w/2) - r));
                                                                                                                 ^
make: *** [scratch] Error 1
